--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,6 +1,2 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
-@font-face {
-    font-family: "Hasklig";
-    src: url("../fonts/hasklig.otf") format("otf");
-}
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
